Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44062

[OS X]: When a mixture of latin and Hangul text is drawn with an underline then there is a gap in the underline on a retina display

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0
    • 5.4.0
    • GUI: Font handling
    • None
    • OS X 10.10
    • macOS
    • 1bb05c4daa070a714d651ec7eac289f627560a47

    Description

      [OS X]: When a mixture of latin and Hangul text is drawn with an underline then there is a gap in the underline on a retina display. In the example attached, the underline is drawn fine when it is not shown on a retina display but there is a gap between the latin and the Hangul characters when it is on a retina display.

      Attachments

        For Gerrit Dashboard: QTBUG-44062
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes